# hsm-ingress-secret-controller

./: .envrc  .gitignore  LICENSE  README.md  devenv.nix  devenv.yaml  dune-project  flake.nix  kubernetes.opam  msal.opam
.github/workflows/: container.yaml
charts/hsm-ingress-secret-controller/: Chart.yaml  values.yaml
charts/hsm-ingress-secret-controller/templates/: CRDs.yaml  ClusterRole.yaml  ClusterRoleBinding.yaml  Deployment.yaml  ServiceAccount.yaml  _helpers.yaml
charts/hsm-ingress-secret-controller/templates/crds/: AkvKey.yaml  CertKey.yaml  HsmKey.yaml
kubernetes/openapi/: openapi3_0.json
manifests/: CRD.yaml  custom_resource.yaml  main.yaml
nix/: container.nix  default.nix  msal.nix  openapi.nix
nix/devenv/: default.nix  env.nix  git-hooks.nix  languages.nix  packages.nix  processes.nix  scripts.nix  test.nix
scripts/: run-with-token.sh
src/lib/akv/: akv.ml  dune
src/lib/akv-controller/: akv_controller.ml  akv_controller.mli  dune
src/lib/kubernetes/: dune  kubernetes.ml
src/msal/: dune  msal.ml  msal.mli  msal_eio.ml  msal_eio.mli  msal_piaf.ml  msal_piaf.mli
src/test/: dune
